--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,18 @@
 <html>
 <head>
   <title>Egging</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all'%>
+  <%= javascript_include_tag 'application'%>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+  <ul>
+      <li>
+        <%= link_to "Home", welcome_index_path%>
+        <%= link_to "About", welcome_about_path%>
+      </li>
+  </ul>
 
 <%= yield %>
 
