--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
 
   <ul>
       <li>
-        <%= link_to "Home", welcome_index_path%>
-        <%= link_to "About", welcome_about_path%>
+        <%= link_to "Home", root_path%>
+        <%= link_to "About", about_path%>
       </li>
   </ul>
 
